# Compiler-Project

./: .gitignore  1  README.md  config.json  run_zlex  simple_git_tutorial.md  start.sh
lib_zlex/: main.cpp
zlex/: CMakeLists.txt  DartConfiguration.tcl  compile_zlex.sh  config.json  config_sem_complete.json  config_sem_if.json  run_zlex  run_zlex.cpp  start.sh  start_sem.sh  思路.md  说明.md
zlex/data/: .gitignore
zlex/data/zlex_in/: source_code.txt  source_code2.txt
zlex/data/zlex_out/: lexicalAnalysis.md  symbolTable.txt
zlex/include/: DFA.hpp  FA.hpp  NFA.hpp  Symbol.hpp  Token.hpp  ZLex.hpp  struct.hpp
zlex/resource/test/: hello.cpp  test.txt  test2.txt  test_escape.txt  test_simple.txt
zlex/src/: DFA.cpp  FA.cpp  NFA.cpp  Symbol.cpp  Token.cpp  ZLex.cpp  main.cpp
zlex/test/: CMakeLists.txt  FATest.cpp  MyTest.cpp
zlex/test/flex/: hide-digits  lex.yy.c  test.l
zlex/zlex/src/: main.cpp
zparser/: CMakeLists.txt  README.md  config.json  config_4.json  config_5.json  log.txt  note.md  semantic_note.md
zparser/data/: FA.md  data.md  output.txt
zparser/data_in/: command.txt  config.json
zparser/grammar_lab/: command.sh  grammer.txt
zparser/grammar_lab/in/: config_include_error.json  sample_in1_token.txt  sample_in2_token.txt
zparser/include/: CST.hpp  Config.hpp  ExposeFun.hpp  FAStruct.hpp  ParseTab.hpp  ParseTabStruct.hpp  Parser.hpp  ParserFun.hpp  Rule.hpp  Rules.hpp  SemanticStruct.hpp  Struct.hpp  SymbolTable.hpp  Token.hpp  Tool.hpp  pch.hpp  struct.hpp
zparser/lab/: command.sh  log.txt
zparser/lab/in/: config.json  config_include_error.json  quick_sort.txt  quick_sort_token.txt  right.txt  sample.in1  sample_in1_token.txt  sample_in3_token.txt
zparser/lab/in/semantic/: sample.in1  sample_in1_token.txt  test1.json
zparser/lab/in/semantic/ex1/: sample.in
zparser/lab/in/semantic/ex2/: sample.in  sample_in_token.txt  test.json
zparser/semantic_lab/: command.sh  log.txt
zparser/semantic_lab/ex1/: sample_in_token.txt
zparser/semantic_lab/ex2/: sample.in  sample_in_token.txt  test.json
zparser/semantic_lab/formal/: code.c  test.json  token.txt
zparser/semantic_lab/grammar/: sdt.txt  sdt_temp.txt
zparser/src/: CST.cpp  Config.cpp  ExposeFun.cpp  FAStruct.cpp  ParseTab.cpp  Parser.cpp  ParserFun.cpp  Rule.cpp  Rules.cpp  SemanticStruct.cpp  SymbolTable.cpp  Token.cpp  Tool.cpp  ZTableGenerator.cpp  main.cpp
zparser/test/: CMakeLists.txt  ConfigTest.cpp  FATest.cpp  MyTest.cpp  ParseTest.cpp  SemanticTest.cpp  config copy.json  config.json  config2.json
zparser/test/four_operations/: config.json  parse_table.md  run.sh  token.txt  token_error.txt
zparser/test/in/: test2tab.md  test2token.txt  test3_2tab.md  test3tab.md  test3token.txt  token.txt
zparser/test/lab/: config.json
zparser/test/semantic_test/complete_test/: test.json
zparser/test/semantic_test/complete_test/in/: source1.c  source2.c  token1.txt  token2.txt
zparser/test/semantic_test/fun_test/: config.json  token.txt
zparser/test/semantic_test/if_test/: config.json  test.json
zparser/test/semantic_test/if_test/in/: source1.c  token1.txt
zparser/test/test1/: FA.html  FA.md  config.json  config_simple.json  parse.cpp  parseTable.md  parseTable_simple.md  parse_simple.cpp  run.sh  run_simple.sh  token.txt  token_simple.txt
